Crash applying automatic weights #64232

Closed
opened 2019-05-07 07:12:41 +02:00 by Montgomery Swift · 7 comments

{F7011533}System Information
Operating system: Win7 x64
Graphics card: nVidia Quadro K1100, 06.05.2019

Blender Version
Broken: blender-2.80.0-git.bfef3bce1a93-windows64

Short description of error
Crash applying automatic weights

Exact steps for others to reproduce the error
Open given file "FunkyRobot.blend"
Click "Weights" on upper left and "Assigned automated..." in the dropdown.
Smaller "Weight from bones" Menu shows at the bottom left.
Click on the dropdown, select "Automatic" -> crash

Debug Window:
redo_cb: operator redo weight from Bones
EXCEPTION_ACCESS_VIOLATION
0x000000013F8A51E7
blender.exe

{[F7011533](https://archive.blender.org/developer/F7011533/FunkyRobot.blend)}**System Information** Operating system: Win7 x64 Graphics card: nVidia Quadro K1100, 06.05.2019 **Blender Version** Broken: blender-2.80.0-git.bfef3bce1a93-windows64 **Short description of error** Crash applying automatic weights **Exact steps for others to reproduce the error** Open given file "FunkyRobot.blend" Click "Weights" on upper left and "Assigned automated..." in the dropdown. Smaller "Weight from bones" Menu shows at the bottom left. Click on the dropdown, select "Automatic" -> crash Debug Window: redo_cb: operator redo weight from Bones EXCEPTION_ACCESS_VIOLATION 0x000000013F8A51E7 blender.exe

Added subscriber: @CortiWins

Added subscriber: @CortiWins
Member

Added subscriber: @nacioss

Added subscriber: @nacioss
Member

I can reproduce the issue on Windows 10 64bit

I can reproduce the issue on Windows 10 64bit
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, checking...

Confirmed, checking...
Philipp Oeser self-assigned this 2019-05-07 09:26:55 +02:00

This issue was referenced by 86e14463d2

This issue was referenced by 86e14463d2da8854e2778db43145c457ddc2ac16
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64232
No description provided.