Fix T64232: crash on Weight from Bones redo